--- a/Web-App-Mvc-Presentation/Views/Shared/Sections/_Showcase.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Shared/Sections/_Showcase.cshtml
@@ -1,4 +1,5 @@
 ﻿<section id="showcase">
+    
     <div class="container">
         @if (TempData["SuccessMessage"] != null && Context.Request.Path == "/")
         {
@@ -13,7 +14,7 @@
         <div class="content">
             <h1>Task Management Assistant You Gonna Love</h1>
             <p>We offer you a new generation of task management system. Plan, manage & track all your task in one flexible tool.</p>
-            <a class="btn-theme" href="#">Get started for free</a>
+            <button class="btn-theme" href="#">Get started for free</button>
             <h6>Largest Companies use our tool to work efficiently</h6>
             <div class="brands">
                 <img src="images/logo (4).svg" alt="">
@@ -22,9 +23,9 @@
                 <img src="images/logo (7).svg" alt="">
             </div>
         </div>
-        <div class="background-image">
-            <img class="background-image" src="~/images/image(16).svg" alt="">
-        </div>
+        
         
     </div>
+    <img class="background-image" src="~/images/image(16).svg" alt="">
+    
 </section>
