--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_showcase.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_showcase.scss
@@ -1,61 +1,161 @@
-#showcase {
+/*#showcase {
     position: relative;
-    
+
 
     .container {
         display: flex;
 
         .content {
-            width: 45%;
-            height: 1000px;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            justify-content: center;
             padding: 10px;
+            text-align: center;
 
-            h1 {
-                padding: 10px;
-                margin-top: 100px;
-                font-size: 1000px;
-            }
-
-            .brands {
-                img {
-                    padding-left: 20px;
-                    margin-top: 20px;
-                }
-            }
-
-            p {
-                padding: 10px;
-            }
-
-            .btn-theme {
-                width: 30%;
-                padding: 10px;
-                margin-top: 50px;
-            }
-
-            h6 {
-                padding: 10px;
-                margin-top: 100px;
+            a {
+                margin: 0 auto;
+                width: 200px;
             }
         }
 
-        
+        @media (min-width:1200px) {
+            .content {
+                justify-content:flex-start;
+                text-align:left;
+                width: 50%;
+                height: 1000px;
+                padding: 10px;
+                a{
+                    width:100%;
+                    justify-content:left;
+                }
+                h1 {
+                    padding: 10px;
+                    margin-top: 100px;
+                    font-size: 1000px;
+                }
 
-        .background-image {
-            transition: 1s;
+                .brands {
+                    img {
+                        padding-left: 20px;
+                        margin-top: 20px;
+                    }
+                }
+
+                p {
+                    padding: 10px;
+                }
+
+                .btn-theme {
+                    width: 30%;
+                    padding: 10px;
+                    margin-top: 50px;
+                }
+
+                h6 {
+                    padding: 10px;
+                    margin-top: 100px;
+                }
+            }
+        }
+
+
+
+
+
+
+        .background-image {*/
+            /*transition: 1s;
             position: absolute;
             top: 0;
             bottom: 0;
-            left: 750px;
-            right: 0;
-            /*:hover {
-                transition: 1s;
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 600px;
-                right: 0;
-            }*/
+            left: 650px;
+            right: 0;*/
+            /*display: none;
+        }
+
+        @media (min-width:1200px) {
+            .background-image {
+                display: block;
+            }
+        }
+    }
+}*/
+
+#showcase {
+    position: relative;
+
+    .background-image {
+        display: none;
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        right: 0;
+    }
+
+    @media(min-width: 1400px) {
+        .background-image {
+            display: block;
+        }
+    }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        padding: 0;
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            justify-content: center;
+            padding-top: 30px;
+            z-index: 0;
+            width: 100%;
+
+            h1 {
+                font-size: 30px !important;
+            }
+
+            p {
+                font-size: 20px;
+            }
+
+            .btn-theme {
+                width: 200px;
+                margin:auto;
+                height:35px;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .content {
+                display: flex;
+                flex-direction: column;
+                text-align: left;
+                justify-content: left;
+
+                p {
+                    font-size: 15px;
+                    width: 30%;
+                }
+
+                h1 {
+                    font-size: 40px !important;
+                    width: 50%;
+                }
+
+                .btn-theme {
+                    height: 35px;
+                    width: 200px;
+                    margin:0;
+                }
+
+                .brands {
+                    display: flex;
+                }
+            }
         }
     }
 }
