--- a/Web-App-Mvc-Presentation/wwwroot/css/site.css
+++ b/Web-App-Mvc-Presentation/wwwroot/css/site.css
@@ -650,19 +650,87 @@ textarea {
   border: 1px solid gray;
 }
 
+header .menu-bar.active {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  text-align: center;
+  padding-top: 50px;
+}
+header .menu-bar.active a {
+  color: black;
+}
+header .menu-bar {
+  display: none;
+}
 header .container {
   display: flex;
   padding: 15px;
   justify-content: space-between;
 }
 header .container .first-head {
-  display: flex;
+  display: none;
   gap: 2rem;
+  display: none;
+}
+@media (min-width: 1200px) {
+  header .container .first-head {
+    display: flex;
+  }
 }
 header .container .head-btn {
-  display: flex;
+  display: none;
   padding: 10px;
   gap: 2rem;
+}
+header .container .head-btn .menu-bar {
+  display: none;
+}
+@media (min-width: 1200px) {
+  header .container .head-btn {
+    display: flex;
+  }
+}
+header .container .menu-box {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+}
+header .container .menu-box span {
+  margin-left: 20px;
+  margin-right: 30px;
+}
+header .container .menu-box .little-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid transparent;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  margin-left: 20px;
+}
+header .container .menu-box .icon-box {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+}
+header .container .menu-box .icon-box .btn-switch {
+  display: none;
+}
+@media (min-width: 500px) {
+  header .container .menu-box .icon-box .btn-switch {
+    display: flex;
+  }
+}
+@media (min-width: 1200px) {
+  header .container .menu-box {
+    display: none;
+  }
 }
 header .container #logo {
   display: flex;
@@ -736,53 +804,153 @@ footer .container .social-media {
   margin-bottom: 30px;
 }
 
+/*#showcase {
+    position: relative;
+
+
+    .container {
+        display: flex;
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            justify-content: center;
+            padding: 10px;
+            text-align: center;
+
+            a {
+                margin: 0 auto;
+                width: 200px;
+            }
+        }
+
+        @media (min-width:1200px) {
+            .content {
+                justify-content:flex-start;
+                text-align:left;
+                width: 50%;
+                height: 1000px;
+                padding: 10px;
+                a{
+                    width:100%;
+                    justify-content:left;
+                }
+                h1 {
+                    padding: 10px;
+                    margin-top: 100px;
+                    font-size: 1000px;
+                }
+
+                .brands {
+                    img {
+                        padding-left: 20px;
+                        margin-top: 20px;
+                    }
+                }
+
+                p {
+                    padding: 10px;
+                }
+
+                .btn-theme {
+                    width: 30%;
+                    padding: 10px;
+                    margin-top: 50px;
+                }
+
+                h6 {
+                    padding: 10px;
+                    margin-top: 100px;
+                }
+            }
+        }
+
+
+
+
+
+
+        .background-image {*/
+/*transition: 1s;
+position: absolute;
+top: 0;
+bottom: 0;
+left: 650px;
+right: 0;*/
+/*display: none;
+        }
+
+        @media (min-width:1200px) {
+            .background-image {
+                display: block;
+            }
+        }
+    }
+}*/
 #showcase {
   position: relative;
 }
+#showcase .background-image {
+  display: none;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+}
+@media (min-width: 1400px) {
+  #showcase .background-image {
+    display: block;
+  }
+}
 #showcase .container {
   display: flex;
+  justify-content: center;
+  padding: 0;
 }
 #showcase .container .content {
-  width: 45%;
-  height: 1000px;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  padding-top: 30px;
+  z-index: 0;
+  width: 100%;
 }
 #showcase .container .content h1 {
-  padding: 10px;
-  margin-top: 100px;
-  font-size: 1000px;
-}
-#showcase .container .content .brands img {
-  padding-left: 20px;
-  margin-top: 20px;
+  font-size: 30px !important;
 }
 #showcase .container .content p {
-  padding: 10px;
+  font-size: 20px;
 }
 #showcase .container .content .btn-theme {
-  width: 30%;
-  padding: 10px;
-  margin-top: 50px;
+  width: 200px;
+  margin: auto;
+  height: 35px;
 }
-#showcase .container .content h6 {
-  padding: 10px;
-  margin-top: 100px;
-}
-#showcase .container .background-image {
-  transition: 1s;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 750px;
-  right: 0;
-  /*:hover {
-      transition: 1s;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 600px;
-      right: 0;
-  }*/
+@media (min-width: 1200px) {
+  #showcase .container .content {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: left;
+  }
+  #showcase .container .content p {
+    font-size: 15px;
+    width: 30%;
+  }
+  #showcase .container .content h1 {
+    font-size: 40px !important;
+    width: 50%;
+  }
+  #showcase .container .content .btn-theme {
+    height: 35px;
+    width: 200px;
+    margin: 0;
+  }
+  #showcase .container .content .brands {
+    display: flex;
+  }
 }
 
 #features {
