--- a/Web-App-Mvc-Presentation/Views/Home/Index.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 
 
 }
-@await Html.PartialAsync("~/Views/Shared/Sections/_Showcase.cshtml");
-@* @await Html.PartialAsync("~/Views/Shared/Sections/_Features.cshtml");
-@await Html.PartialAsync("~/Views/Shared/Sections/_LightAndDark.cshtml");
-@await Html.PartialAsync("~/Views/Shared/Sections/_ManageYourWork.cshtml");
-@await Html.PartialAsync("~/Views/Shared/Sections/_DownloadApp.cshtml");
-@await Html.PartialAsync("~/Views/Shared/Sections/_IntegrateWork.cshtml");
-@await Html.PartialAsync("~/Views/Shared/Sections/_DontMissAnything.cshtml"); *@
+@await Html.PartialAsync("~/Views/Shared/Sections/_Showcase.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Sections/_Features.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Sections/_LightAndDark.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Sections/_ManageYourWork.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Sections/_DownloadApp.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Sections/_IntegrateWork.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Sections/_DontMissAnything.cshtml")
