--- a/Web-App-Mvc-Presentation/Views/Partial/_header.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Partial/_header.cshtml
@@ -111,7 +111,16 @@
 
 
             <a class="menu-link" asp-controller="Auth" asp-action="Logout"><span>Log out</span></a>
-            <a asp-controller="Auth" asp-action="Details">Profile</a>
+            <a class="menu-link" asp-controller="Auth" asp-action="Details">Profile</a>
+            
+            <a class="menu-link" asp-controller="Auth" asp-action="Details">Account Details</a>
+
+
+            <a class="menu-link" asp-controller="Auth" asp-action="Security">Security</a>
+                
+             
+            <a class="menu-link" asp-action="Join" asp-controller="Courses">Saved Courses</a>
+              
             
         }
 
