--- a/Web-App-Mvc-Presentation/Views/Shared/Sections/_DontMissAnything.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Shared/Sections/_DontMissAnything.cshtml
@@ -45,6 +45,9 @@
 
 
         </div>
+        <div class="News">
+            <h4>Sign up for NewsLetter</h4>
+        </div>
         <form class="sub" asp-action="Index" asp-controller="Subscribers" method="post">
             <input type="email" asp-for="Email">
             <div>
