--- a/Web-App-Mvc-Presentation/Views/Shared/_Layout.cshtml
+++ b/Web-App-Mvc-Presentation/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
 
         
 
-        @await Html.PartialAsync("~/Views/Partial/_header.cshtml");
+        @await Html.PartialAsync("~/Views/Partial/_header.cshtml")
         
         @RenderBody()
 
-        @await Html.PartialAsync("~/Views/Partial/_footer.cshtml");
+        @await Html.PartialAsync("~/Views/Partial/_footer.cshtml")
 
 
 
