--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_features.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_features.scss
@@ -3,10 +3,19 @@
     padding-top: 100px;
     padding-bottom: 100px;
     background-color: $theme-opacity;
+    
 
     .container {
         text-align: center;
-
+        
+        padding:0;
+        align-items:center;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        h1 {
+            font-size: 30px !important;
+        }
 
         .box {
             padding: 20px;
@@ -17,43 +26,48 @@
         }
 
         .tool-features {
-            margin-top: 100px;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr;
             grid-template-rows: 1fr 1fr;
             gap: 0px;
             margin-bottom: 50px;
+        }
+
+        @media (min-width:1200px) {
+            .tool-features {
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+            }
         }
 
         .box1 {
             border-right: 1px solid rgb(226, 226, 226);
             border-bottom: 1px solid rgb(226, 226, 226);
             border-left: 1px solid rgb(226, 226, 226);
-            padding: 20px;
+            text-align: center;
         }
 
         .box2 {
             border-bottom: 1px solid rgb(226, 226, 226);
-            padding: 20px;
+            text-align: center;
         }
 
         .box3 {
             border-top: 1px solid rgb(226, 226, 226);
-            padding: 20px;
+            text-align: center;
         }
 
         .box4 {
             border-left: 1px solid rgb(226, 226, 226);
-            padding: 20px;
+            text-align: center;
         }
 
         .box5 {
             border-left: 1px solid rgb(226, 226, 226);
-            padding: 20px;
+            text-align: center;
         }
 
         .box6 {
-            padding: 20px;
         }
     }
 }
