--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_header.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_header.scss
@@ -1,19 +1,28 @@
 header {
+    .menu-bar {
+        display: none;
+    }
 
     .menu-bar.active {
         display: flex;
         flex-direction: column;
         gap: 30px;
         text-align: center;
-        padding-top:50px;
+        padding-top: 50px;
+
         a {
             color: black;
         }
     }
 
-    .menu-bar {
-        display: none;
+    @media (min-width:1200px) {
+        .menu-bar.active {
+            display: none;
+        }
     }
+
+
+
 
     .container {
         display: flex;
