--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_integratework.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_integratework.scss
@@ -1,5 +1,5 @@
 #integrate-work {
-    margin-top: 100px;
+    padding-top: 100px;
 
     .container {
 
@@ -7,8 +7,7 @@
         .head-line {
             text-align: center;
             margin-bottom: 60px;
-            padding-left: 200px;
-            padding-right: 200px;
+            
         }
 
         .boxes-and-icons {
@@ -20,9 +19,10 @@
         }
 
         .box {
-            display: flex;
+            display: block;
             gap: 30px;
-
+            justify-content:center;
+            text-align:center;
             .link-box {
                 text-decoration: none;
                 color: black;
@@ -34,6 +34,11 @@
                     border-radius: 20px;
                     transition: 0.5s;
                 }
+            }
+        }
+        @media (min-width:1200px){
+            .box{
+                display:flex;
             }
         }
     }
