--- a/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_showcase.scss
+++ b/Web-App-Mvc-Presentation/wwwroot/css/scss/sections/_showcase.scss
@@ -90,8 +90,9 @@
         display: none;
         position: absolute;
         z-index: -1;
-        top: 0;
+        top: -50px;
         right: 0;
+        width:900px;
     }
 
     @media(min-width: 1400px) {
@@ -113,7 +114,7 @@
             padding-top: 30px;
             z-index: 0;
             width: 100%;
-
+            padding-bottom:200px;
             h1 {
                 font-size: 30px !important;
             }
